# saga

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  example-output.txt  flake.nix  gen_stdlib_docs.sh  install.sh  loc.sh  rebar3.crashdump  run_examples.sh  run_selective_examples.sh  sample.core  test_binary.beam
.cargo/: config.toml
audit/: effect-cps-transform.md
docs/: cli-improvements.md  compiler-overview.md  concurrency.md  const-bindings.md  dependency-management.md  dynamic-type.md  effarrow-unification.md  effect-accumulator-refactor.md  effect-goto-def-design.md  effect-implementation.md  effect-optimization.md  effects-guide.md  failing-examples.md  ffi-design.md  formatter-audit.md  generic-deriving.md  handle-bindings.md  handler-bindings.md  implementation-notes.md  language-design.md  library-system.md  lsp.md  messaging.md  module-lowering.md  module-system.md  module-work.md  name-resolution.md  node-id-refactor.md  pipeline.md  printing.md  qualified-name-resolution.md  remove-known-funs-registry.md  roadmap-formatter.md  roadmap-lsp.md  roadmap-stdlib.md  roadmap.md  stdlib.md  syntax-cheatsheet.md  tc-audit.md  tc-refactor.md  (+6 more)
examples/: 00-compiles.saga  01-hello-world.dy  01-hello-world.saga  02-fibonacci.dy  02-fibonacci.saga  03-booleans.dy  03-booleans.saga  04-fizzbuzz.dy  04-fizzbuzz.saga  05-records.dy  05-records.saga  06-lists.dy  06-lists.saga  07-list-patterns.dy  07-pattern-matching.dy  07-pattern-matching.saga  08-bst.dy  08-bst.saga  09-sorting.dy  09-sorting.saga  10-log-effect.dy  13-strings.dy  (+140 more)
(+845 files in other folders)
