[package]
name = "saga"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"


[[bin]]
name = "saga"
path = "src/main.rs"

[[bin]]
name = "saga-lsp"
path = "src/lsp/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
flate2 = "1"
tar = "0.4"
